--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <!-- Full Width Column -->
     <div class="content-wrapper">
-        <div class="container">
+        <!--<div class="container">-->
             <!-- Main content -->
             <section class="content">
                 <div class="nav-tabs-custom">
@@ -446,7 +446,7 @@
                     </div><!-- /.tab-content -->
                 </div><!-- nav-tabs-custom -->
             </section><!-- /.content -->
-        </div><!-- /.content-wrapper -->
+        <!--</div>--><!-- /.content-wrapper -->
 
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
